tests/fixtures/invalid/pow_dict_bool_float.py
# Cannot call pow() with Dict[str, int], Bool, Float
x = pow({"a": 1}, True, 1.0)
